--- a/src/components/reform/detail/ReformFlow.astro
+++ b/src/components/reform/detail/ReformFlow.astro
@@ -11,7 +11,7 @@ export type Props = {};
     </div>
     <div class="content_box">
       <section class="inner">
-        <h4>相談スタート・プランニング</h4>
+        <h3 class="align_left">相談スタート・プランニング</h3>
         <div class="inner_content">
           <p class="balloon left">
             私、自分の家がずっと大嫌いだったんです。だから、この最後のリフォームは思い切り自分の好きなようにしたくて。私、自分の家がずっと大嫌いだったんです。だから、この最後のリフォームは思い切り自分の好きなようにしたくて。私、自分の家がずっと大嫌いだったんです。だから、この最後のリフォームは思い切り自分の好きなよう
@@ -20,7 +20,7 @@ export type Props = {};
         </div>
       </section>
       <section class="inner">
-        <h4>イエノコトのご提案</h4>
+        <h3 class="align_left">イエノコトのご提案</h3>
         <div class="inner_content">
           <UserIcon src="https://placehold.jp/116x116.png" name="石田" />
           <p class="balloon right">
@@ -36,7 +36,7 @@ export type Props = {};
     </div>
     <div class="content_box">
       <section class="inner">
-        <h4>プラン確定</h4>
+        <h3 class="align_left">プラン確定</h3>
         <div class="inner_content">
           <Image
             src="https://placehold.jp/189x223.png"
@@ -59,7 +59,7 @@ export type Props = {};
     </div>
     <div class="content_box">
       <section class="inner">
-        <h4>施工開始</h4>
+        <h3 class="align_left">施工開始</h3>
       </section>
     </div>
   </div>
@@ -69,7 +69,7 @@ export type Props = {};
     </div>
     <div class="content_box">
       <section class="inner">
-        <h4>完成</h4>
+        <h3 class="align_left">完成</h3>
       </section>
     </div>
   </div>
