--- a/src/components/reform/StoriesList.astro
+++ b/src/components/reform/StoriesList.astro
@@ -32,19 +32,21 @@ const ReformPosts = [
   {
     ReformPosts.map((post) => (
       <div class="story">
-        <Image
-          class="story_image"
-          src={post.image}
-          alt={post.title}
-          format={"webp"}
-          loading={"lazy"}
-          width={1920}
-          height={832}
-        />
-        <div class="story_content">
-          <h3 class="story_title">{post.title}</h3>
-          {post.spec && <p class="story_spec">{post.spec}</p>}
-        </div>
+        <a class="story_link" href="/reform/01">
+          <Image
+            class="story_image"
+            src={post.image}
+            alt={post.title}
+            format={"webp"}
+            loading={"lazy"}
+            width={1920}
+            height={832}
+          />
+          <div class="story_content">
+            <h3 class="story_title">{post.title}</h3>
+            {post.spec && <p class="story_spec">{post.spec}</p>}
+          </div>
+        </a>
       </div>
     ))
   }
@@ -61,6 +63,11 @@ const ReformPosts = [
     + .story {
       margin-top: 3px;
     }
+  }
+  .story_link {
+    display: block;
+    width: 100%;
+    height: 100%;
   }
   .story_content {
     position: absolute;
