リフォーム詳細作りこみ／PC小画面レスポンシブ

--- a/src/components/common/AboutModelHouse.astro
+++ b/src/components/common/AboutModelHouse.astro
@@ -7,39 +7,49 @@ import ModelImage from "~/img/model_image.png";
   <h2>モデルハウスのご案内</h2>
   <div class="content">
     <Image width={443} src={ModelImage} alt="Facebook" />
-    <p class="text">
+    <div class="text">
       イエノコトのモデルハウスは、「捨てる！技術」辰巳渚の家を一部再現した、暮らしのエッセンスがたくさん詰まった、古民家風の新築です。<br
       />
       <br />
       モデルハウスは貸しスペースも行っており、ヨガ教室や料理教室、韓国語講座などにもご利用いただいています。<br
       />
       <br />
-      モデルハウス見学ご希望の方は、0120-200-789まで事前にご予約ください。<br />
+      モデルハウス見学ご希望の方は、<a href="tel:0120-200-789">0120-200-789</a
+      >まで事前にご予約ください。<br />
       <br />
-      　　営業時間　　10:00～17:00（水曜定休）<br />
-      　　所在地　　　福岡県太宰府市通古賀5-2-3<br />
-      　　　　　　　　※駐車場あり<br />
-      　　　　　　　　※西鉄大牟田線都府楼前駅より徒歩１０分<br />
-    </p>
+      <dl class="contact">
+        <dt>営業時間</dt><dd>10:00～17:00（水曜定休）</dd>
+        <dt>所在地</dt><dd>福岡県太宰府市通古賀5-2-3</dd>
+        <dt>&emsp;</dt><dd>※駐車場あり</dd>
+        <dt>&emsp;</dt><dd>※西鉄大牟田線都府楼前駅より徒歩１０分</dd>
+      </dl>
+    </div>
   </div>
-</section>
-<style lang="scss">
-  .about_modelhouse {
-    margin: auto;
-    h2 {
-      margin-bottom: 146px;
-    }
-    .content {
-      display: flex;
-      justify-content: center;
-      column-gap: 95px;
-      @media screen and (max-width: $baseContentWidth) {
-        column-gap: vw(95px, $baseWindowWidth);
-      }
+  <style lang="scss">
+    .about_modelhouse {
       margin: auto;
-      .text {
-        max-width: 563px;
+      h2 {
+        margin-bottom: 146px;
+      }
+      .content {
+        display: flex;
+        justify-content: center;
+        column-gap: 95px;
+        @media screen and (max-width: $baseContentWidth) {
+          column-gap: vw(95px, $baseWindowWidth);
+        }
+        margin: auto;
+        .text {
+          max-width: 563px;
+        }
+      }
+      .contact {
+        padding-left: 30px;
+        dt {
+          width: 100px;
+          float: left;
+        }
       }
     }
-  }
-</style>
+  </style>
+</section>
