--- a/src/components/common/LoopSection.astro
+++ b/src/components/common/LoopSection.astro
@@ -38,8 +38,9 @@ const { contents, class: className } = Astro.props;
     column-gap: 125px;
     max-width: 1140px;
     margin: auto;
-    @media screen and (max-width: 1168px) {
-      column-gap: vw(100px, 1168px);
+    @media screen and (max-width: 1300px) {
+      max-width: 95%;
+      column-gap: 5%;
     }
     + .loop_content {
       margin-top: 197px;
