--- a/src/components/post/ColumnList.astro
+++ b/src/components/post/ColumnList.astro
@@ -78,6 +78,11 @@ const Columns = [
     justify-content: space-between;
     margin-top: 104px;
   }
+  li {
+    @media screen and (max-width: 1300px) {
+      width: vw(322px, 1000px);
+    }
+  }
   img {
     margin-bottom: 30px;
   }
