--- a/src/components/reform/StoriesList.astro
+++ b/src/components/reform/StoriesList.astro
@@ -86,6 +86,9 @@ const ReformPosts = [
     box-shadow: 0 3px 6px rgba($color: #000, $alpha: 0.16);
     font-size: 18px;
     font-weight: bold;
+    @media screen and (max-width: 1300px) {
+      margin-left: 2.5%;
+    }
   }
   .story_spec {
     position: absolute;
@@ -94,6 +97,10 @@ const ReformPosts = [
     color: #fff;
     font-size: 18px;
     font-weight: bold;
+    @media screen and (max-width: 1300px) {
+      margin-left: 3%;
+      bottom: 5%;
+    }
   }
 
   .story_image {
