--- a/src/components/global/Navi.astro
+++ b/src/components/global/Navi.astro
@@ -62,5 +62,13 @@ const isHome = Astro.url.pathname === "/";
         content: "／";
       }
     }
+    @media screen and (max-width: 1023px) {
+      .wrap {
+        display: block;
+      }
+      .nav {
+        height: auto;
+      }
+    }
   }
 </style>
