--- a/src/components/post/EventList.astro
+++ b/src/components/post/EventList.astro
@@ -69,6 +69,11 @@ const Events = [
     justify-content: space-between;
     margin-top: 104px;
   }
+  li {
+    @media screen and (max-width: 1300px) {
+      width: vw(322px, 1000px);
+    }
+  }
   img {
     margin-bottom: 30px;
   }
