--- a/src/components/reform/detail/PageTopSpec.astro
+++ b/src/components/reform/detail/PageTopSpec.astro
@@ -35,8 +35,8 @@ const { cost, area, building, tags } = Astro.props;
 <style lang="scss">
   table {
     max-width: 1265px;
-    @media screen and (max-width: 1265px) {
-      margin-left: 2.5%;
+    @media screen and (max-width: 1300px) {
+      max-width: 95%;
     }
     margin-left: auto;
     margin-right: auto;
