--- a/src/pages/reform/01.astro
+++ b/src/pages/reform/01.astro
@@ -13,6 +13,7 @@ import DummyImage4 from "~/img/reform/example/detail_04.jpg";
 import StaffCard from "~/components/reform/detail/StaffCard.astro";
 import ReformFlow from "~/components/reform/detail/ReformFlow.astro";
 import UserVoice from "~/components/reform/detail/UserVoice.astro";
+import ReformCaseList from "~/components/post/ReformCaseList.astro";
 const detail = {
   cost: "総額600万円",
   building: "戸建て",
@@ -63,6 +64,22 @@ const staff = {
     tags={detail.tags}
   />
   <h2 class="copy_title">完成した住まい</h2>
+  <p class="copy_detail">
+    人生最後のリノベーション。ずっと、もっとこうしたい、があった。それがかなったリフォーム。これから死ぬまで住むための気合を入れたリフォーム。タカラのキッチン。自分で納得するまでショールームに何回も行って納得するまで行った。マグネットだから移動できるし掃除しやすいので、マグネットのタカラを採用。
+    フローリングも、奥様が全部直接見に行って購入。<br />
+    <br />
+    ずっと突っ走ってきた人生。ゆっくりできる、家。<br />
+    <br />
+    これから楽に暮らせるリフォーム。<br />
+    <br />
+    いままでは時間があるから、足りるものの量で暮らしたい。このリフォームを機会に片付けたい。納戸の片付けレッスンも行った上で、置くものをイメージ<br
+    />
+    片付けレッスンを行った上で、キッチンを選んだので、片付けを意識して自分にちょうどいい収納量のキッチンを選んだ。<br
+    />
+    <br />
+    自分の家を自分の手でどうにか良くしたい、というリフォーム、奥様に寄り添ったリフォーム。<br
+    />
+  </p>
   <ReformImages images={detail.images} />
   <section class="material">
     <h2 class="material_title">使用した素材と設備</h2>
@@ -89,13 +106,19 @@ const staff = {
       name="お客様"
       src="https://placehold.jp/150x150.png"
       text="明るい奥様で、打ち合わせが楽しく進みました。未来のビジョンがしっかりあり、ひとつひとつ納得してモノ選びをする姿に感動しました。新しい家で使いたいモノと手放すモノをジャッジしながら工事期間を過ごしていただきました。お会いすると、幸せそうな笑顔にいつもうれしくなります。"
+      class={"user"}
     />
     <UserVoice
       title="担当者からのコメント"
       name="石田"
       src="https://placehold.jp/150x150.png"
       text="明るい奥様で、打ち合わせが楽しく進みました。未来のビジョンがしっかりあり、ひとつひとつ納得してモノ選びをする姿に感動しました。新しい家で使いたいモノと手放すモノをジャッジしながら工事期間を過ごしていただきました。お会いすると、幸せそうな笑顔にいつもうれしくなります。"
+      class={"staff"}
     />
+  </section>
+  <section class="other_recommend">
+    <h2 class="other_recommend_title">その他のおすすめ施工事例</h2>
+    <ReformCaseList />
   </section>
 </PageContent>
 <style lang="scss">
@@ -114,8 +137,17 @@ const staff = {
     margin-top: 153px;
     margin-bottom: 94px;
   }
+  .copy_detail {
+    margin-top: 94px;
+    margin-bottom: 91px;
+    max-width: 1250px;
+    margin-left: auto;
+    margin-right: auto;
+    @media screen and (max-width: 1265px) {
+      max-width: 95%;
+    }
+  }
   .staff_title {
-    margin-top: 267px;
     margin-bottom: 133px;
   }
   .material {
@@ -137,5 +169,11 @@ const staff = {
   .voice {
     margin-top: 230px;
     margin-bottom: 228px;
+  }
+  .other_recommend {
+    margin-bottom: 403px;
+  }
+  .other_recommend_title {
+    margin-bottom: 119px;
   }
 </style>
