メニュー調整・PC以下調整

--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -105,4 +105,9 @@ import { PAGES } from "../../consts";
     border-left: solid 1px #6c6c60;
     transform: rotate(45deg);
   }
+  @media screen and (max-width: 1024px) {
+    .footer-content {
+      flex-direction: column;
+    }
+  }
 </style>
